--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
+       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.03.18</span>, I give a talk in National Key Laboratory of Science and Technology on Multispectral Information Processing, invited by <strong><a href="https://owuchangyuo.github.io/">Prof. Yi Chang</a></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10.13</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.27</span>, I gave a talk about our CVPR'22 work (MSDN) in VALSE.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I gave a talk about zero-shot learning in AI TIME and AI Drive.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.27</span>, I give a talk about our CVPR'22 work (MSDN) in VALSE.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I give a talk about zero-shot learning in AI TIME and AI Drive.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
