--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@ var _hmt = _hmt || [];
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
-		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
-<!-- 		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>] -->
+<!-- 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
+		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>] -->
 	</li>
  	<li>
 		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
