--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.07</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.03.18</span>, I give a talk in National Key Laboratory of Science and Technology on Multispectral Information Processing, invited by <strong><a href="https://owuchangyuo.github.io/">Prof. Yi Chang</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10.13</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
@@ -417,6 +418,10 @@ var _hmt = _hmt || [];
 	 
      <h2>Invited Talks</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left; color:red"><strong>Department of Mathematics and Statistics, Huazhong Agricultural Univeristy</strong></div> <div style="float:right; text-align:right">Apr. 2023</div><br>
+		<strong>Title</strong>: Attribute Based Zero-Shot Learning<br>
+	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>School of Computer Science and Technology, Guizhou University</strong></div> <div style="float:right; text-align:right">Apr. 2023</div><br>
 		<strong>Title</strong>: Semantic-Guided Zero-Shot Learning<br>
