--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 <!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
 	  <span>I currently a Postdoctoral Research Fellow in the <a href="https://www.cmu.edu/dietrich/causality/">Causal Learning and Reasoning (CLeaR)</a> research group at CMU and the <a href="https://mbzuai.ac.ae/research/research-center/ciai/">Center for Integrative AI (CIAI)</a> at MBZUAI, working with Prof.  <a href="https://www.andrew.cmu.edu/user/kunz1/index.html">Kun Zhang</a>. Prior to that, I received my Ph.D. degree at Huazhong University of Science and Technology in 2022, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
 	  I was also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
-          My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>.</span> <br> <br> 
+          My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. I am the AC of VALSE</span> <br> <br> 
 	  <span></span><br>
 <!-- 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span> -->
     </div>
@@ -412,7 +412,7 @@ var _hmt = _hmt || [];
 	   IEEE/CAA Journal of Automatica Sinica, 
            Information Sciences (INS), etc.<br>
 	   
-	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV (2021,2023), AAAI(2022,2023), CVPR(2022, 2023), ECCV'22, ICLR'23.
+	 <strong>Conference PC/Reviewers:</strong> ICLR'23, NeurIPS'23, IJCAI(2021, 2022),  CVPR(2022, 2023), ICCV (2021,2023), ECCV'22, ACM MM'21, AAAI(2022,2023).
     </div>
 	
 	 
