--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.07</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.07</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.03.18</span>, I give a talk in National Key Laboratory of Science and Technology on Multispectral Information Processing, invited by <strong><a href="https://owuchangyuo.github.io/">Prof. Yi Chang</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
@@ -160,6 +161,21 @@ var _hmt = _hmt || [];
 <h3 style="color: red">Conference Papers </h3>
 
 	
+<tr>
+	
+		<td width="206">
+		<img src="img/ICML23-DSP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Evolving Semantic Prototype Improves Generative Zero-Shot Learning.</a>
+<!-- 			<strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br> -->
+		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
+       <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>	
 
 <tr>
 	
@@ -175,7 +191,7 @@ var _hmt = _hmt || [];
 		</td>
 	</tr>
 	<tr></tr>
-    <tr></tr	
+	<tr></tr>	
 
 <tr>
 	
