--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ var _hmt = _hmt || [];
 <!-- 			<strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]
 				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br> -->
-		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
+		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Ziming Hong, Xiaohan Ding, Yibing Song, Xinge You, Tongliang Liu, Kun Zhang.</p>
        <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
