--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ var _hmt = _hmt || [];
 	Although ZSL has achieved significant progress, there have a numbers of essential challenges.<br><br>
 		   
          Dr. Shiming Chen has been focusing on tackling bottleneck challenges to promote ZSL, covering fundamental questions of
-         \textit{How to enhance the visual features by alleviating the cross-dataset bias between ImageNet and ZSL benchmarks? 
+         <i>How to enhance the visual features by alleviating the cross-dataset bias between ImageNet and ZSL benchmarks? 
 	 How to discover the intrinsic semantic knowledge by alleviating the visual-semantic domain shift problem? 
-	How to align the visual and semantic features in a common space by reducing the discrepancy between the heterogeneous visual-semantic representations?} 
+	How to align the visual and semantic features in a common space by reducing the discrepancy between the heterogeneous visual-semantic representations?</i>
 	Specifically, his three representatives research projects are: <br> <br> 
 	
          <strong>1. Developing the visual feature enhancement algorithms to tackle the challenge of cross-dataset bias in ZSL. </strong> 
