--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ var _hmt = _hmt || [];
     <div id="news-content" >
 	   <span>
          A key challenge of artificial intelligence is to generalize machine learning models from seen data to unseen scenarios.
-	Zero-shot learning (ZSL) is a typical research topic targeting this goal. ZSL aims to classify the images of unseen classes by constructing a mapping relationship between the semantic and visual domains.
+	<strong><i>Zero-shot learning (ZSL)</i></strong> is a typical research topic targeting this goal. ZSL aims to classify the images of unseen classes by constructing a mapping relationship between the semantic and visual domains.
 	Although ZSL has achieved significant progress, there have a numbers of essential challenges.<br><br>
 		   
          Dr. Shiming Chen has been focusing on tackling bottleneck challenges to promote ZSL, covering fundamental questions of
