--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@ var _hmt = _hmt || [];
          As for the embedding-based ZSL, a graph-guided dual attention network is introduced to fuse the local visual features and explicit global visual features
 	to enhance visual features. As for the generative ZSL, several feature refinement learning methods are proposed to enhance the visual features and encourage
 	the generator to synthesize realistic visual features for unseen classes. The papers of this project have been published in 
-	<i> ICCV'21, IJCAI'22, IEEE TPAMI'22, IEEE TNNLS'22, IEEE TEC'21</i>, etc.<br> <br> 
+	<i> ICCV'21, IEEE TEC'21, IJCAI'22, IEEE TNNLS'22, IEEE TPAMI'22, </i>, etc.<br> <br> 
 		   
         <strong>2. Developing the effective ZSL algorithms to tackle the visual-semantic domain shift problem. </strong> 
 	As for the embedding-based ZSL, a attribute-guided Transformer network and mutually semantic distillation network are proposed to learn the intrinsic 
 	semantic knowledge, enriching the visual features with semantic information to enable desirable semantic knowledge transfer from seen calsses to unseen ones.
 	As for the generative ZSL, dynamic semantic prototype learning is proposed to refine the pre-defined semantic prototypes under the guidance of visual signal,
 	 aligning the empirical and actual semantic prototypes for synthesizing accurate visual features. The papers of this project have been published in 
-	<i>CVPR'22, ICML'23, AAAI'22</i>, etc.<br> <br> 
+	<i>CVPR'22, AAAI'22, ICML'23</i>, etc.<br> <br> 
 		   
        <strong>3. Developing the hierarchical semantic-visual adaptation framework for visual-semantic alignment.</strong> 
 	Different to existing one-step adaptation method that on alignment the feature distributions between visual and semantic domains, 
