--- a/index.html
+++ b/index.html
@@ -80,7 +80,19 @@ var _hmt = _hmt || [];
 	</tbody>
 </table>
 	
-	
+    <h2>Short Bios</h2>
+    <div id="news-content" >
+<!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
+	  <span>I am currently a Postdoctoral Research Fellow in the <a href="https://www.cmu.edu/dietrich/causality/">Causal Learning and Reasoning (CLeaR)</a> 
+		research group at CMU and the <a href="https://mbzuai.ac.ae/research/research-center/ciai/">Center for Integrative AI (CIAI)</a> at MBZUAI, 
+		fortunately working with Prof.  <a href="https://www.andrew.cmu.edu/user/kunz1/index.html">Kun Zhang</a>. 
+		Prior to that, I received my Ph.D. degree at Huazhong University of Science and Technology, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
+	        I was also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
+                My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. </span> <br> <br> 
+	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br>
+<!-- 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span> -->
+    </div>
+	 
 
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
@@ -449,13 +461,7 @@ var _hmt = _hmt || [];
      <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TSMCA,  TITS, TII, 
-	   International Journal of Computer Vision (IJCV),
-	   Information Fusion (INF),
-	   Artificial Intelligence Review, 
-	   Expert Systems With Applications，
-	   IEEE/CAA Journal of Automatica Sinica, 
-           Information Sciences (INS), etc.<br>
+	   TPAMI, IJCV, TIP, TNNLS, TEVC, TCYB, TSMCA, TITS, TII, TMM, TASE, etc.<br>
 	   
 	 <strong>Conference PC/Reviewers:</strong> ICLR'23, NeurIPS'23, IJCAI(2021, 2022),  CVPR(2022, 2023), ICCV (2021,2023), ECCV'22, ACM MM'21, AAAI(2022,2023).
     </div>
