--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@ var _hmt = _hmt || [];
     <h2>Short Bios</h2>
     <div id="news-content" >
 <!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
-	  <span>I am currently a Postdoctoral Research Fellow in the <a href="https://www.cmu.edu/dietrich/causality/">Causal Learning and Reasoning (CLeaR)</a> 
+	  <span>
+<!-- 		I am currently a Postdoctoral Research Fellow in the <a href="https://www.cmu.edu/dietrich/causality/">Causal Learning and Reasoning (CLeaR)</a> 
 		research group at CMU and the <a href="https://mbzuai.ac.ae/research/research-center/ciai/">Center for Integrative AI (CIAI)</a> at MBZUAI, 
 		fortunately working with Prof.  <a href="https://www.andrew.cmu.edu/user/kunz1/index.html">Kun Zhang</a>. 
-		Prior to that, I received my Ph.D. degree at Huazhong University of Science and Technology, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
+		Prior to that,  -->
+		I received my Ph.D. degree at Huazhong University of Science and Technology, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
 	        I was also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
                 My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. </span> <br> <br> 
 	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br>
