--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ var _hmt = _hmt || [];
     <h2>Industrial Experience</h2>
 	<ul>
 	<li>
-		<div style="float:left; text-align:left">Tencent, AI Lab. </div> <div style="float:right; text-align:right">Jan. 2022 – </div><br>
+		<div style="float:left; text-align:left">Tencent, AI Lab. </div> <div style="float:right; text-align:right">Jan. 2022 – Dec. 2022</div><br>
 		Research Intern<br>
 		Topic: Zero-shot Learning, Visual-and-Language System<br>
 	</li>
