--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.06.20</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.18</span>, I give a talk in Alibaba DAMO Academic, invited by <strong>Baigui Sun</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.07</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
@@ -120,9 +121,9 @@ var _hmt = _hmt || [];
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted to <strong><i>ICCV'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
+      <!--<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
-<!--       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
+       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
     </div>
@@ -307,7 +308,7 @@ var _hmt = _hmt || [];
 
 	
 	
-     <tr>	
+<!--      <tr>	
 		<td width="206">
 		<img src="img/IJCAI21.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -319,7 +320,7 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
     <tr></tr>
-    <tr></tr>
+    <tr></tr> -->
 </tbody>
 </table>
 		
@@ -471,6 +472,10 @@ var _hmt = _hmt || [];
 	 
      <h2>Invited Talks</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left; color:＃BDB76B"><strong>School of Information Science and Technology, University of Science and Technology of China </strong></div> <div style="float:right; text-align:right">Jun. 2023</div><br>
+		<strong>Title</strong>: Zero-Shot Learning in Vision<br>
+	</li>
 	<li>
 		<div style="float:left; text-align:left; color:＃BDB76B"><strong>Alibaba DAMO Academic </strong></div> <div style="float:right; text-align:right">Apr. 2023</div><br>
 		<strong>Title</strong>: Semantic-Guided Zero-Shot Learning<br>
