--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.06.20</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.07.01</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.06.20</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.18</span>, I give a talk in Alibaba DAMO Academic, invited by <strong>Baigui Sun</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.07</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.03</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.03.27</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of VALSE, news at <strong><a href="http://valser.org/article-634-1.html">Here</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.03.18</span>, I give a talk in National Key Laboratory of Science and Technology on Multispectral Information Processing, invited by <strong><a href="https://owuchangyuo.github.io/">Prof. Yi Chang</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10.13</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
