--- a/index.html
+++ b/index.html
@@ -463,12 +463,16 @@ var _hmt = _hmt || [];
 	</ul>  
 	 
 	 
-     <h2><strong>Academic Experience:Reviewer</strong></h2>
+     <h2><strong>Academic Experience</strong></h2>
    <div>
-	<strong>Journal Reviewers:</strong> 
-	   TPAMI, IJCV, TIP, TNNLS, TEVC, TCYB, TSMCA, TITS, TII, TMM, TASE, etc.<br>
+	<strong>Area Chair:</strong> 
+	PRCV'23, VALSE.<br>
 	   
-	 <strong>Conference PC/Reviewers:</strong> ICLR'23, NeurIPS'23, IJCAI(2021, 2022),  CVPR(2022, 2023), ICCV (2021,2023), ECCV'22, ACM MM'21, AAAI(2022,2023).
+	<strong>Journal Reviewers:</strong> 
+	TPAMI, IJCV, TIP, TNNLS, TEVC, TCYB, TSMCA, TITS, TII, TMM, TASE, etc.<br>
+	
+	<strong>Conference PC/Reviewers:</strong> 
+	ICLR'23, NeurIPS'23, IJCAI(2021, 2022),  CVPR(2022, 2023), ICCV (2021,2023), ECCV'22, ACM MM'21, AAAI(2022,2023).
     </div>
 	
 	 
