--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ var _hmt = _hmt || [];
 	
     <tr>	
 		<td width="206">
-		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/GNDAN.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
 			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
