--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ var _hmt = _hmt || [];
 	 
 
       <h2 >News</h2>
-    <div id = "news-content" style="margin-top: 15px">
+    <div id = "news-content" style="margin-top: 15px; overflow: auto;">
+    <ul>
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.07.01</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.06.20</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
@@ -128,6 +129,7 @@ var _hmt = _hmt || [];
        <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
+    </ul>ul>
     </div>
      
  
