--- a/index.html
+++ b/index.html
@@ -98,18 +98,19 @@ var _hmt = _hmt || [];
 		research group at CMU and the <a href="https://mbzuai.ac.ae/research/research-center/ciai/">Center for Integrative AI (CIAI)</a> at MBZUAI, 
 		fortunately working with Prof.  <a href="https://www.andrew.cmu.edu/user/kunz1/index.html">Kun Zhang</a>. 
 		Prior to that,  -->
-		I received my Ph.D. degree at Huazhong University of Science and Technology, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.html">Xinge You</a> and worked closely Prof. <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ">Ling Shao</a>.
-	        I was also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
+		I received my Ph.D. degree at Huazhong University of Science and Technology in Dec. 2022, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.html">Xinge You</a> and worked closely Prof. <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ">Ling Shao</a>.
+	        I visited at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
                 My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. </span> <br> <br> 
-	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br>
+<!-- 	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br> -->
 <!-- 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span> -->
     </div>
 	 
 
       <h2 >News</h2>
-    <div id = "news-content" style="margin-top: 15px; overflow: auto;">
+    <div id = "news-content" style="margin-top: 15px; overflow: scroll;">
     <ul>
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.07.01</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2023.07.14</span>, one paper is accepted to <strong><i>ICCV'23</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.07.01</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.06.20</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.25</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2023.04.18</span>, I give a talk in Alibaba DAMO Academic, invited by <strong>Baigui Sun</strong>.</li>
