--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
-    <ul>
       <li><span style="color:Red">2023.07</span>, one paper is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
@@ -127,20 +126,19 @@ var _hmt = _hmt || [];
       <li><span style="color:Red">2022.04</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li><span style="color:Red">2022.03</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in Extreme Mart (极市).</li>
-      <li></li><span style="color:Red">2022.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
+      <li><span style="color:Red">2022.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
 	      Systems (TNNLS)</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in AI TIME PhD-NeurIPS, invite by AI TIME.</li>
       <li><span style="color:Red">2022.01</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
       <li><span style="color:Red">2021.12</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
       <li><span style="color:Red">2021.09</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
       <li><span style="color:Red">2021.07</span>, one paper is accepted to <strong><i>ICCV'21</i></strong>.</li>
-      <li><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
+      <li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <!--<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
       <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
       <li><span style="color:Red">2019.09</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li><span style="color:Red">2019.01</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li><span style="color:Red">2018.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
-    </ul>
     </div>
      
  
