--- a/index.html
+++ b/index.html
@@ -465,8 +465,13 @@ var _hmt = _hmt || [];
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
     </div>  
    
-    <h2>Industrial Experience</h2>
+    <h2>Work Experience</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left">rustworthy Machine Learning Lab (TML Lab), Uinversity of Sydney. Hosted by <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a></div> <div style="float:right; text-align:right">April. 2022 – Dec. 2022</div><br>
+		Visiting Student<br>
+		Topic: Zero-shot Learning, Noisy Label<br>
+	</li>
 	<li>
 		<div style="float:left; text-align:left">Tencent, AI Lab. </div> <div style="float:right; text-align:right">Jan. 2022 – Dec. 2022</div><br>
 		Research Intern<br>
@@ -486,7 +491,7 @@ var _hmt = _hmt || [];
 	</ul>  
 	 
 	 
-     <h2><strong>Academic Experience</strong></h2>
+     <h2><strong>Professional Services</strong></h2>
    <div>
 	<strong>Area Chair:</strong> 
 	PRCV'23, VALSE.<br>
