--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
     <h2>Work Experience</h2>
 	<ul>
 	<li>
-		<div style="float:left; text-align:left">rustworthy Machine Learning Lab (TML Lab), Uinversity of Sydney. Hosted by <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a></div> <div style="float:right; text-align:right">April. 2022 – Dec. 2022</div><br>
+		<div style="float:left; text-align:left">Trustworthy Machine Learning Lab (TML Lab), Uinversity of Sydney. Hosted by <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a></div> <div style="float:right; text-align:right">April. 2022 – Dec. 2022</div><br>
 		Visiting Student<br>
 		Topic: Zero-shot Learning, Noisy Label<br>
 	</li>
