--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@ var _hmt = _hmt || [];
 		<img src="img/ICML23-DSP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> Evolving Semantic Prototype Improves Generative Zero-Shot Learning.</a>
-			<strong>[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>]</strong><br>
-<!-- 				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
-				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br> -->
+			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong><br>
+				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>]
+<!-- 				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br> -->
 		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Ziming Hong, Xiaohan Ding, Yibing Song, Xinge You, Tongliang Liu, Kun Zhang.</p>
        <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
